# heatOption

./: .travis.yml  CMakeLists.txt  README.md  run_tests.sh
benchmarks/: allStru3Benchmarks.cpp  allStruBenchmarks.cpp  benchmarking_stru.cpp  benchmarking_stru3.cpp  makefile  run_stru3Benchmarks.sh  run_struBenchmarks.sh
benchmarks/dbench/: dbench.h  timer.h  timer89.h
examples/cappedAsymmetricPowerCall/: .input.json.swp  input.json  run_simulation.sh
examples/cappedSymmetricPowerCall/: input.json  plot.sh
examples/vanilla_call/: input.json  plot.sh
examples/vanilla_put/: input.json  plot.sh
gtest/: allStru2Tests.cpp  allStru3Tests.cpp  allStruTests.cpp  makefile  run_tests.sh  test_bcgs.cpp  test_gauss.cpp  test_matrix.cpp  test_stru.cpp  test_stru2.cpp  test_stru2_ref.cpp  test_stru3.cpp
matrix_stru/: matrixET.h  stru_1.h  stru_2.h  stru_3.h  stru_base.h  stru_math.h  stru_matrix.h  stru_row.h
matrix_stru2/: stru2.h  stru2_access.h  stru2_construct.h  stru2_math.h  stru2_meta.h  stru2_ref.h  stru2_ref_access.h  stru2_ref_math.h
matrix_stru3/: stru3_gauss.h  stru3_matrix.h  stru3_sliceIter.h
plot/: .plot.py.swp  analyt.py  plot.py
setups/: diffusion.h
simulator/: CMakeLists.txt  assembly.h  black_scholes.h  dataSet.h  discretization.h  input.json  input.xml  input_json.cpp  input_json.h  input_xml.h  main.cpp  makefile  pde.h  plot.py  run_simulation.sh  simulator.h  utilities.h
solver/: bcgs.h  double_sweep.h  gauss.h
supplements/: matrixIO.h  matrixSlice.h  matrix_error.h  matrix_init.h  matrix_math.h  slice.h
(+8 files in other folders)
